templates/route-ui.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vault-server-ui
  labels:
    app.kubernetes.io/instance: vault-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault-server-ui
    app.kubernetes.io/part-of: vault-server
    helm.sh/chart: vault-0.19.0
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: vault-console.apps.ocp4-mwn.linuxrevolution.com
  to:
    kind: Service
    name: vault-server-ui
    weight: 100
  tls:
    termination: edge
  port:
    targetPort: http
  wildcardPolicy: None
